Resolve "red borders" on tablet/mobile

--- a/app/assets/stylesheets/widgets/_ad_landing_page/masthead__virtual.scss
+++ b/app/assets/stylesheets/widgets/_ad_landing_page/masthead__virtual.scss
@@ -367,7 +367,7 @@
       background-color: v(cu-red);
       will-change: filter, brightness;
       @include qbal-slideUp-enter;
-      min-height: v(imgSize);
+      max-height: 100%;
 
       &:focus,
       &:focus-within {
